# AutoGentoo

./: .anjuta_sym_db.db  .atom-dbg.cson  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  AutoGentoo  AutoGentoo.cbp  AutoGentoo.desktop  AutoGentoo.geany  AutoGentoo.layout  AutoGentoo.mk  AutoGentoo.project  AutoGentoo.py  AutoGentoo.workspace  CMakeLists.txt  Hacksaw.mk  Hacksaw.project  Launcher.desktop  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  autogentoo-1.1.ebuild  autogentoo-gclient.sublime-workspace  autogentoo.conf  autogentoo.installer  autogentoo.sublime-workspace  compile_commands.json  config.h.in  configure  configure.ac  doxygen.cfg  emerge.py  install.py  main.c  parse_cache.py  partitions.py  (+6 more)
autogentoo/cportage/: CMakeLists.txt  __init__.py  atom.c  atom.h  autogentoo_cportage.pyi  common.h  depend.y  depend_bison.y  depend_flex.l  dependency.c  dependency.h  ebuild.c  ebuild.h  language.c  language.h  module.c  package.c  package.h  portage.c  portage.h  readme.md  requireduse.y  requireduse_bison.y  requireduse_flex.l  use.c  use.h
autogentoo/hacksaw/: CMakeLists.txt  hacksaw.h  log.c  lut.c  lut.h  map.c  queue.c  set.h  small_map.c  stack.h  util.h  vector.h
cportage/: .gitignore  CMakeLists.txt  atom.c  atom.h  backtrack.c  backtrack.h  cemerge.c  compile_commands.json  compress.c  compress.h  conflict.c  constants.h  cportage_api.c  cportage_api.h  database.c  database.h  dependency.c  dependency.h  directory.c  directory.h  emerge.c  emerge.h  files.txt  globals.c  globals.h  keywords.c  keywords.h  manifest.c  manifest.h  package.c  package.h  portage.c  portage.h  portage_log.c  portage_log.h  profile.c  profile.h  sets.h  suggestion.c  suggestion.h  (+2 more)
cportage/language/: atom-main.c  atom.c  atom.h  atom_bison.y  atom_flex.l  depend-main.c  depend.c  depend.h  depend_bison.y  depend_flex.l  make_conf_bison.y  make_conf_flex.l  share.c  share.h
cportage/src/: ResolveRequest.cpp  ResolveRequest.h  ResolvedEbuild.h  ResolvedPackage.cpp  ResolvedPackage.h  atom.c  atom.h  backtrack.c  backtrack.h  block.c  block.h  cache.c  cache.h  cemerge.c  compress.c  conflict.c  conflict.h  constants.h  cportage_defines.h  database.c  database.h  dep_v4.c  dep_v4.h  dependency.c  dependency.h  dependency_old.c  directory.c  directory.h  emerge.c  emerge.h  features.c  features.h  globals.c  globals.h  installed_backtrack.c  installed_backtrack.h  keywords.c  keywords.h  main.c  manifest.c  (+18 more)
hacksaw/: .gitattributes  .gitignore  CMakeLists.txt  Hacksaw.project  Makefile.am  conf.c  configure.ac  debug.c  directory.c  getopt.c  linked_vector.c  log.c  main.c  manifest.c  map.c  package_config.c  queue.c  queue_set.c  repository.c  set.c  small_map.c  stack.c  string.c  string_vector.c  use_flag.c  util.c  vector.c
hacksaw/include/: _hacksaw.h  hacksaw.h  language.h  tools.h
hacksaw/language/: Makefile.am  atom.c  atom.h  atom_bison.y  depend.c  depend.h  depend_bison.y  share.c  share.h
hacksaw/src/: Makefile.am  conf.c  debug.c  dependency.c  directory.c  hash.c  linked_vector.c  log.c  main.c  manifest.c  map.c  package.c  package_config.c  regular_expression.c  repository.c  server_init.c  small_map.c  string.c  string_vector.c  use_flag.c  util.c  vector.c
include/autogentoo/: Makefile.am  autogentoo.h  binpkg.h  chroot.h  cli.h  command.h  command_line.h  crypt.h  download.h  dynamic_binary.h  endian_convert.h  gentoo_config.h  getopt.h  handle.h  header.h  host.h  host_environment.h  http.h  kernel.h  pool.h  query.h  queue.h  render.h  request.h  request_structure.h  response.h  server.h  stage.h  thread.h  user.h  worker.h  writeconfig.h
language/: .gitignore  Makefile.am  atom-main.c  atom.c  atom.h  atom_bison.y  atom_flex.l  depend-main.c  depend.c  depend.h  depend_bison.y  depend_flex.l  package-main.c  package.c  package.h  package_bison.y  package_flex.l  share.c  share.h  use.c  use.h  use_bison.y  use_flex.l
lib/core/: Makefile.am  mount.h  stage3.h
lib/portage/: Makefile.am  _misc_tools.hh  config.hh  emerge.hh  file.hh  option.hh  type.hh  use.hh  version.hh  warning.hh
service/: Makefile.am  archive.c  autogentoo.c  chroot.c  command.c  download.c  endian_convert.c  getopt.c  handle.c  host.c  kernel.c  response.c  server.c  stage.c  thread.c  writeconfig.c
src/: .autogentoo.config  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  _string.c  _xml.py  autogentoo-update  autogentoo.c  autogentoo.py  build.py  chroot.c  cli.c  command.c  command_line.c  conf.c  config.c  crossdev.c  crypt.c  crypt.old.c  debug.c  defs.pyx  dependency.c  directory.c  download.c  dynamic_binary.c  emerge.c  emergeflags.h  en_US.utf8  endian_convert.c  geany.project  gentoo_config.c  getopt.c  handle.c  hash.c  host.c  host_environment.c  htoip.c  htoip_port.c  http.c  (+58 more)
src/api/: .gitignore  CMakeLists.txt  Makefile.am  authorize.pxd  cython_dynamic_binary.pxd  cython_vector.pxd  cython_vector.pyx  d_malloc.pxd  d_malloc.pyx  dynamic_binary.c  host_serial.c  request.pxd  request.pyx  request_check.c  request_generate.c  setup.py  ssl_stream.c  ssl_wrap.c  test.py
src/base/: Makefile  autogentoo.h  devices.c  devices.h  devices_test.c  download.c  download.h  profile.c  profile.h  ptr_handler.c  ptr_handler.h  ptr_test.c  stage3.c  stage3.h
src/cglobal/: Makefile  command_tools.c  command_tools.h  config_test  config_test.c  configparser.c  configparser.h  dictionary.h  encrypt.c  encrypt.h  encrypt_test  encrypt_test.c  file.c  file.h  file_test  file_test.c  mlib.h  mstring.c  mstring.h
src/command/: Option.hpp  command_line.hpp  option_test  option_test.cxx
src/config/: autogentoo_config.cxx  autogentoo_config.hpp  config.py  config_pkg.hpp  config_test.cxx  set.hpp  test.cfg
src/configs/: .config  .config.old  Kconfig  Kconfig_distro  diff
src/core/: Makefile  Makefile.am  Makefile.in  autogentoo.c  devices.c  devices_test.c  disk.c  disk.h  download.c  download.h  download_test.c  mount.c  parted_test.c  profile.c  profile.h  profile_test.c  stage3.c
src/cportage/: CMakeLists.txt  __init__.py  atom.c  (+22 more)
(+907 files in other folders)
