SUBDIRS = hacksaw
mainincludedir = $(includedir)/autogentoo
maininclude_HEADERS =   autogentoo.h \
                        handle.h \
                        host.h \
                        response.h \
                        request.h \
                        server.h \
                        writeconfig.h \
                        chroot.h \
                        stage.h \
                        download.h \
                        binpkg.h \
                        command.h \
                        kernel.h \
                        getopt.h \
                        thread.h \
                        request_structure.h \
                        queue.h
