SUBDIRS = hacksaw
mainincludedir = $(includedir)/autogentoo
maininclude_HEADERS =   getopt.h          request_structure.h \
                        autogentoo.h      response.h binpkg.h \
                        handle.h          pool.h     server.h \
                        chroot.h          host.h     query.h      stage.h \
                        crypt.h           http.h     queue.h      thread.h \
                        endian_convert.h  kernel.h   render.h     user.h \
                        gentoo_config.h   request.h  writeconfig.h
