coreincludedir = $(pkgincludedir)/core
coreinclude_HEADERS =                   \
                         autogentoo.h   \
                         devices.h      \
                         disk.h         \
                         download.h     \
                         profile.h      \
                         stage3.h
