portageincludedir = $(pkgincludedir)/portage
portageinclude_HEADERS =                                                            \
  bash_config.hh  emerge.hh         flags.hh        packageConfig.hh  use.hh        \
  blocks.hh       emergepackage.hh  is_dir.hh       package.hh        version.hh    \
  config.hh       file.hh           _misc_tools.hh  parse_config.hh   warning.hh    \
  ebuild.hh       findPackage.hh    option.hh       type.hh
